# dioxus-sortable

./: Cargo.toml  Dioxus.toml  IDEAS.md  Makefile  README.md
docs/examples/prime-ministers/: index.html
docs/examples/prime-ministers/assets/dioxus/: dioxus-sortable.js  dioxus-sortable_bg.wasm  prime-ministers.js  prime-ministers_bg.wasm
docs/examples/prime-ministers/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
docs/examples/prime_minister/assets/dioxus/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
examples/: prime_ministers.rs  table.rs
src/: lib.rs  rsx.rs  sorter.rs  use_sorter.rs
